--- a/WebRoot/css/questionAndAnswer.css
+++ b/WebRoot/css/questionAndAnswer.css
@@ -12,3 +12,24 @@
 	margin-left:5%;
 	display:inline-block;
 }
+
+  input#chat {  
+            width: 60%;
+            margin-left:35%; 
+        }  
+  
+  
+        #console {  
+            border: 1px solid #CCCCCC;  
+            border-right-color: #999999;  
+            border-bottom-color: #999999;  
+            height: 450px;  
+            overflow-y: scroll;  
+            padding: 5px;  
+            width: 100%;  
+        }  
+  
+        #console p {  
+            padding: 0;  
+            margin: 0;  
+        }  
